# esp32-OTA

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.github/workflows/: deploy.yml
main/: CMakeLists.txt  Kconfig  main.c  version.h  wifi.c
scripts/: after_build.sh  deploy_update.sh  update_version.py
